; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_scatterwalk.c_scatterwalk_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_scatterwalk.c_scatterwalk_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scatter_walk = type { i32, %struct.scatterlist* }
%struct.scatterlist = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scatterwalk_start(%struct.scatter_walk* %0, %struct.scatterlist* %1) #0 {
  %3 = alloca %struct.scatter_walk*, align 8
  %4 = alloca %struct.scatterlist*, align 8
  store %struct.scatter_walk* %0, %struct.scatter_walk** %3, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %4, align 8
  %5 = load %struct.scatterlist*, %struct.scatterlist** %4, align 8
  %6 = load %struct.scatter_walk*, %struct.scatter_walk** %3, align 8
  %7 = getelementptr inbounds %struct.scatter_walk, %struct.scatter_walk* %6, i32 0, i32 1
  store %struct.scatterlist* %5, %struct.scatterlist** %7, align 8
  %8 = load %struct.scatterlist*, %struct.scatterlist** %4, align 8
  %9 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  %14 = call i32 @BUG_ON(i32 %13)
  %15 = load %struct.scatterlist*, %struct.scatterlist** %4, align 8
  %16 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.scatter_walk*, %struct.scatter_walk** %3, align 8
  %19 = getelementptr inbounds %struct.scatter_walk, %struct.scatter_walk* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
